@@ -44,6 +44,7 @@ CHANGELOG Roundcube Webmail
 - Add SASL-IR support in IMAP (RFC 4959)
 - Add LOGINDISABLED support (RFC 2595)
 - Add support for AUTH=PLAIN in IMAP authentication
+- Re-implemented SMTP proxy authorization support
 
 RELEASE 0.4.2
 -------------
